# ai-health-optimizer

./: .env.example  .gitignore  Makefile  ROADMAP.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: c18e63a383e0_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  dashboard.py  fitbit.py  food.py  insights.py  users.py  wearables.py
backend/app/core/: config.py  database.py  security.py
backend/app/engine/models/: energy_balance.py  recovery.py  training_load.py
backend/app/engine/policy/: weekly_optimizer.py
backend/app/engine/prompts/: daily_checkin.txt  food_response.txt  recovery_alert.txt  weekly_review.txt
backend/app/integrations/fitbit/: client.py
backend/app/models/: food.py  insights.py  schemas.py  user.py  wearable.py
backend/app/services/: coaching.py  food_vision.py  nutrition.py
backend/tests/: conftest.py  test_auth_api.py  test_coaching_service.py  test_dashboard_api.py  test_energy_balance.py  test_fitbit_client.py  test_food_api.py  test_food_vision_service.py  test_nutrition_service.py  test_onboarding.py  test_recovery_model.py  test_security.py  test_training_load.py  test_weekly_optimizer.py
frontend/: package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/food-log/: page.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  utils.ts
(+8 files in other folders)
