[project]
name = "ai-health-optimizer"
version = "0.1.0"
description = "AI-powered health optimization platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]
